Update index.html daniel email

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <tr>
             <td>Team Members (email addresses)</td>
             <td>
-                <p>Daniel Acosta (@my.fit.edu)</p>
+                <p>Daniel Acosta (dacosta2022@my.fit.edu)</p>
                 <p>Christopher Demuro (@my.fit.edu)</p>
                 <p>Alex Merino (amerino2022@my.fit.edu)</p>
                 <p>Luka Miodrag Starcevic (@my.fit.edu)</p>
