--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <td>Team Members (email addresses)</td>
             <td>
                 <p>Daniel Acosta (dacosta2022@my.fit.edu)</p>
-                <p>Christopher Demuro (@my.fit.edu)</p>
+                <p>Christopher Demuro (cdemuro2022@my.fit.edu)</p>
                 <p>Alex Merino (amerino2022@my.fit.edu)</p>
                 <p>Luka Miodrag Starcevic (@my.fit.edu)</p>
             </td>
@@ -30,7 +30,7 @@
         <tr>
             <td>Plan (Jan 27)</td>
             <td><p><a href="./">Plan</a>, 
-                <a href="/">Presentation</a></p></td>
+                <a href="./">Presentation</a></p></td>
         </tr>
         <tr>
             <td>Milestone 1 (Feb 24)</td>
