added last email

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p>Daniel Acosta (dacosta2022@my.fit.edu)</p>
                 <p>Christopher Demuro (cdemuro2022@my.fit.edu)</p>
                 <p>Alex Merino (amerino2022@my.fit.edu)</p>
-                <p>Luka Miodrag Starcevic (@my.fit.edu)</p>
+                <p>Luka Miodrag Starcevic (lstarcevic2022@my.fit.edu)</p>
             </td>
         </tr>
         <tr>
