--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <title>Form Buster Project Site</title>
     <link rel="stylesheet" type="text/css" href="main.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Form Buster: Web registration and tracking</h1>
+    <header>
+        <h1>Form Buster: Web registration and tracking</h1>    
+    </header>
     <table>
         <tr>
             <td>Project Name</td>
@@ -25,7 +33,7 @@
             <td>Phillip Bernhard (pbernhar@fit.edu)</td>
         </tr>
     </table>
-    <h3>First Semester</h3>
+    <h2>First Semester</h2>
     <table>
         <tr>
             <td>Plan (Jan 27)</td>
@@ -46,15 +54,14 @@
             <td>Milestone 2 (Mar 26)</td>
             <td><p><a href="./">Presentation</a>,
                     <a href="./">Progress Evaluation</a>
-</p></td>
+                </p></td>
         </tr>
         <tr>
             <td>Milestone 3 (Apr 21)</td>
             <td><p><a href="./">Presentation</a>
                     <a href="./">Progress Evaluation</a>
-</p></td>
+                </p></td>
         </tr>
     </table>
-    <table></table>
 </body>
 </html>
