added pdf files

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <table>
         <tr>
             <td>Plan (Jan 27)</td>
-            <td><p><a href="./">Plan</a>, 
-                <a href="./">Presentation</a></p></td>
+            <td><p><a href="./src/media/project-plan.pdf">Plan</a>, 
+                <a href="./src/media/plan-prez.pdf">Presentation</a></p></td>
         </tr>
         <tr>
             <td>Milestone 1 (Feb 24)</td>
@@ -63,5 +63,9 @@
                 </p></td>
         </tr>
     </table>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
