--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <tr>
             <td>Milestone 1 (Feb 24)</td>
             <td><p>
-                <a href="./src/media/req-doc.pdf">Requirement</a>,
-                <a href="./src/media/design-doc.pdf">Design</a>,
-                <a href="./src/media/test-doc.pdf">Test</a>,
-                <a href="./src/media/req-doc.pdf">Presentation</a>,
-                <a href="./src/media/Prog-eval-1.pdf">Progress Evaluation</a>
+                <a target="_blank" href="./src/media/req-doc.pdf">Requirement</a>,
+                <a target="_blank" href="./src/media/design-doc.pdf">Design</a>,
+                <a target="_blank" href="./src/media/test-doc.pdf">Test</a>,
+                <a target="_blank" href="./src/media/m1-prez.pdf">Presentation</a>,
+                <a target="_blank" href="./src/media/Prog-eval-1.pdf">Progress Evaluation</a>
             </p></td>
         </tr>
         <tr>
