--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </tr>
         <tr>
             <td>Milestone 2 (Mar 26)</td>
-            <td><p><a href="./">Presentation</a>,
-                    <a href="./">Progress Evaluation</a>
+            <td><p><a href="./src/media/m2-prez.pdf">Presentation</a>,
+                    <a href="./src/media/Prog-eval-2.pdf">Progress Evaluation</a>
                 </p></td>
         </tr>
         <tr>
