--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </tr>
         <tr>
             <td>Milestone 3 (Apr 21)</td>
-            <td><p><a href="./">Presentation</a>
-                    <a href="./">Progress Evaluation</a>
+            <td><p><a target="_blank" href="./src/media/m3-prez.pdf">Presentation</a>,
+                    <a target="_blank" href="./src/media/Prog-eval-3.pdf">Progress Evaluation</a>
                 </p></td>
         </tr>
     </table>
