--- a/index.html
+++ b/index.html
@@ -64,6 +64,40 @@
         </tr>
     </table>
 
+    <h2>Second Semester</h2>
+
+    <table>
+        <tr>
+            <td>Plan (Sep 3)</td>
+            <td><p><a target="_blank" href="./src/media/project-plan-2.pdf">Plan</a>, 
+                <a target="_blank" href="./src/media/plan-2-prez.pdf">Presentation</a></p></td>
+        </tr>
+        <tr>
+            <td>Milestone 4 (Sep 29)</td>
+            <td><p>
+                <a target="_blank" href="./src/media/m4-prez.pdf">Presentation</a>,
+                <a target="_blank" href="./src/media/Prog-eval-4.pdf">Progress Evaluation</a>
+            </p></td>
+        </tr>
+        <tr>
+            <td>Milestone 5 (Oct 27)</td>
+            <td><p>
+                    <a href="./src/media/poster.pdf">Poster</a>,
+                <a href="./src/media/m5-prez.pdf">Presentation</a>,
+                    <a href="./src/media/Prog-eval-5.pdf">Progress Evaluation</a>
+                </p></td>
+        </tr>
+        <tr>
+            <td>Milestone 6 (Nov 24)</td>
+            <td><p>
+                <a target="_blank" href="./src/media/maual.pdf">User/Dev Manual</a>,
+                    <a target="_blank" href="">Demo Video</a>,
+                <a target="_blank" href="./src/media/m6-prez.pdf">Presentation</a>,
+                    <a target="_blank" href="./src/media/Prog-eval-6.pdf">Progress Evaluation</a>
+                </p></td>
+        </tr>
+    </table>
+
     <footer>
         
     </footer>
