--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <tr>
             <td>Milestone 6 (Nov 24)</td>
             <td><p>
-                <a target="_blank" href="./src/media/maual.pdf">User/Dev Manual</a>,
-                    <a target="_blank" href="">Demo Video</a>,
+                <a target="_blank" href="./src/media/manual.pdf">User/Dev Manual</a>,
+                    <a target="_blank" href="./src/media/demo.mp4">Demo Video</a>,
                 <a target="_blank" href="./src/media/m6-prez.pdf">Presentation</a>,
                     <a target="_blank" href="./src/media/Prog-eval-6.pdf">Progress Evaluation</a>
                 </p></td>
