--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <td>Milestone 6 (Nov 24)</td>
             <td><p>
                 <a target="_blank" href="./src/media/manual.pdf">User/Dev Manual</a>,
-                    <a target="_blank" href="./src/media/demo.mp4">Demo Video</a>,
+                    <a target="_blank" href="https://drive.google.com/file/d/1hzhy7xsI7vxjSPJQYW3K_y2wN3DwKExZ/view?usp=drive_link">Demo Video</a>,
                 <a target="_blank" href="./src/media/m6-prez.pdf">Presentation</a>,
                     <a target="_blank" href="./src/media/Prog-eval-6.pdf">Progress Evaluation</a>
                 </p></td>
